Wip-130-time-picker Add use-mask-input hook, fix label alignment and timeColumnContainer position, add input option for TimeInput field

--- a/src/components/molecules/InputWrapper/styles.module.scss
+++ b/src/components/molecules/InputWrapper/styles.module.scss
@@ -10,7 +10,6 @@
     @include labelTextStyle;
     display: inline-block;
     padding-right: spacing(2.5);
-    align-self: flex-start;
   }
 
   .wrapper {
